--- a/templates/register.html
+++ b/templates/register.html
@@ -19,6 +19,9 @@
     <div class="form-group">
       {{render_field(form.confirm, class_="form-control")}}
     </div>
+    <div class="form-group">
+      {{render_field(form.accept_tos)}}
+    </div>
     <p><input type="submit" class="btn btn-primary" value="Submit"></p>
   </form>
 {% endblock %}
