--- a/templates/article.html
+++ b/templates/article.html
@@ -1,10 +1,15 @@
 {% extends 'layout.html' %}
-
 {% block body %}
-  <h1>{{article.title}}</h1>
-  <small>Written by {{article.author}} on {{article.create_date}}</small>
-  <hr>
-  <div class="container">
-    {{article.body | safe}}
-  </div>
+<section class="text-center">
+   <div class="download-section">
+      <div class="container">
+         <div class="col-lg-8">
+            <h1>{{article.title}}</h1>
+            <small>Written by {{article.author}} on {{article.create_date}}</small>
+            <hr>
+            {{article.body | safe}}
+         </div>
+      </div>
+   </div>
+</section>
 {% endblock %}
