--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,16 +1,15 @@
 <!-- <nav class="navbar navbar-inverse navbar-fixed-top"> -->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-custom navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+      Menu <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand" href="#">MyFlaskApp</a>
+      <a class="navbar-brand page-scroll" href="#page-top">
+      <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
+      </a>
     </div>
-    <div id="navbar" class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
@@ -18,14 +17,15 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if session.logged_in %}
-              <li><a href="/dashboard">Dashboard</a></li>
-              <li><a href="#">Welcome, {{session['username']}}!</a></li>
-              <li><a href="/logout">Logout</a></li>
+        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a href="#">Welcome, {{session['username']}}!</a></li>
+        <li><a href="/logout">Logout</a></li>
         {% else %}
-              <li><a href="/register">Register</a></li>
-              <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
+        <li><a href="/login">Login</a></li>
         {% endif %}
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
+    <!--/.nav-collapse -->
   </div>
 </nav>
