--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style type="text/css" media="screen">
+      footer {
+      padding: 50px 0;
+      }
+    </style>
     <meta charset="utf-8">
     <title>MyFlaskApp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- Bootstrap Core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css.map" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <!-- Theme CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/css/grayscale.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     {% include 'includes/_navbar.html' %}
-    <div class="container">
-      {% include 'includes/_messages.html' %}
-      {% block body %}{% endblock %}
-    </div>
+    <header class="intro">
+      <div class="intro-body">
+        <div class="container col-md-8 col-md-offset-2">
+
+          {% include 'includes/_messages.html' %}      	
+          {% block body %}{% endblock %}
+        </div>
+      </div>
+      </div>
+    </header>
+    <footer>
+      <div class="container text-center">
+        <p>Copyright &copy; Your Website 2016</p>
+      </div>
+    </footer>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="//cdn.ckeditor.com/4.7.1/basic/ckeditor.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <!-- Theme JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/js/grayscale.min.js"></script>
     <script type="text/javascript">
       CKEDITOR.replace('editor')
     </script>
