--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 {% block body %}
   <h1>Register</h1>
   {% from "includes/_formhelpers.html" import render_field %}
-  <form method="POST" action="">
+  <form method="POST" action="" align="left">
     <div class="form-group">
       {{render_field(form.name, class_="form-control")}}
     </div>
@@ -22,6 +22,7 @@
     <div class="form-group">
       {{render_field(form.accept_tos)}}
     </div>
-    <p><input type="submit" class="btn btn-primary" value="Submit"></p>
+    <p><input type="submit" class="btn btn-default" value="Submit"></p>
   </form>
+
 {% endblock %}
