--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,10 +1,9 @@
 {% extends 'layout.html' %}
-
 {% block body %}
-  <h1>Articles</h1>
-  <ul class="list-group">
-    {% for article in articles: %}
-      <li class="list-group-item"><a href="article/{{article.id}}">{{article.title}}</a></li>
-    {% endfor %}
-  </ul>
+<h1>Articles</h1>
+<div class="list-group">
+  {% for article in articles: %}
+    <a href="article/{{article.id}}" class="list-group-item">{{article.title}}</a>
+  {% endfor %}
+</div>
 {% endblock %}
