--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,31 +1,32 @@
 {% extends 'layout.html' %}
-
 {% block body %}
-  <div class="cointainer">
-    <h1>Dashboard <small> Welcome {{session.username}}</small></h1>
-  </div>
-  <a href="/add_article" class="btn btn-default">Add article</a>
-  <hr>
-  <table class="table table-striped">
-    <tr>
-      <th>ID</th>
+<div class="cointainer" align="left">
+   <h1>Dashboard</h1>
+<a href="/add_article" class="btn btn-default">Add article</a>
+</div>
+<br>
+<table class="table table-condensed active">
+   <tr>
+      <th scope="col">ID</th>
       <th>Title</th>
       <th>Author</th>
       <th>Date</th>
       <th></th>
       <th></th>
-    </tr>
-    {% for article in articles %}
-      <tr>
-        <td>{{article.id}}</td>
-        <td>{{article.title}}</td>
-        <td>{{article.author}}</td>
-        <td>{{article.create_date}}</td>
-        <td><a href="edit_article/{{article.id}}" class="btn btn-success pull-right">Edit</a></td>
-        <td><a href="#" class="btn btn-danger pull-right">Delete</a></td>
-      </tr>
-    {% endfor %}
-  </table>
-
-
+   </tr>
+   {% for article in articles %}
+   <tr>
+      <td align="left">{{article.id}}</td>
+      <td align="left">
+         <a  href="article/{{article.id}}" class="link">
+         {{article.title}}
+         </a>
+      </td>
+      <td align="left">{{article.author}}</td>
+      <td align="left">{{article.create_date}}</td>
+      <td align="left"><a href="edit_article/{{article.id}}" class="btn btn-success pull-right">Edit</a></td>
+      <td align="left"><a href="#" class="btn btn-danger pull-right">Delete</a></td>
+   </tr>
+   {% endfor %}
+</table>
 {% endblock %}
