--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,9 +20,9 @@
     {% include 'includes/_navbar.html' %}
     <header class="intro">
       <div class="intro-body">
-        <div class="container col-md-8 col-md-offset-2">
-
-          {% include 'includes/_messages.html' %}      	
+          {% include 'includes/_messages.html' %}
+          <div class="container col-md-8 col-md-offset-2">
+          <br><br>
           {% block body %}{% endblock %}
         </div>
       </div>
@@ -36,7 +36,7 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="//cdn.ckeditor.com/4.7.1/basic/ckeditor.js"></script>
+    <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Theme JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/js/grayscale.min.js"></script>
