--- a/templates/article.html
+++ b/templates/article.html
@@ -1,9 +1,10 @@
 {% extends 'layout.html' %}
 {% block body %}
 <section class="text-center">
-   <div class="download-section">
-      <div class="container">
-         <div class="col-lg-8">
+  <br><br><br><br>
+   <div>
+      <div>
+         <div >
             <h1>{{article.title}}</h1>
             <small>Written by <i>{{article.author}}</i> on {{article.create_date}}</small>
             <hr>
