--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -6,23 +6,23 @@
       Menu <i class="fa fa-bars"></i>
       </button>
       <a class="navbar-brand page-scroll" href="#page-top">
-      <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
+      <i class="fa fa-glass"></i><span class="light"> Triviales</span> Dichas
       </a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/articles">Articles</a></li>
+        <li><a href="/"><i class="fa fa-home"></i>  Inicio</a></li>
+        <li><a href="/about"><i class="fa fa-info"></i>  Acerca de</a></li>
+        <li><a href="/articles"><i class="fa fa-paint-brush"></i>  Publicaciones</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if session.logged_in %}
-        <li><a href="/dashboard">Dashboard</a></li>
-        <li><a href="#">Welcome, {{session['username']}}!</a></li>
-        <li><a href="/logout">Logout</a></li>
+        <li><a href="#">Bienvenido, {{session['username']}}!</a></li>
+        <li><a href="/dashboard"><i class="fa fa-newspaper-o"></i>Dashboard</a></li>
+        <li><a href="/logout"><i class="fa fa-sign-in"></i>Salir</a></li>
         {% else %}
-        <li><a href="/register">Register</a></li>
-        <li><a href="/login">Login</a></li>
+        <li><a href="/register"><i class="fa fa-user"></i>  Registrarse</a></li>
+        <li><a href="/login"><i class="fa fa-sign-in"></i>  Iniciar Sesión</a></li>
         {% endif %}
       </ul>
     </div>
