--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
   <h1>Login</h1>
-  <form action="" method="POST">
+  <form action="" method="POST" class="text-left">
     <div class="form-group">
       <label>Username</label>
       <input type="text" name="username" class="form-control" value={{request.form.username}}>
@@ -11,6 +11,7 @@
       <label>Password</label>
       <input type="password" name="password" class="form-control" value={{request.form.password}}>
     </div>
+    <br>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 {% endblock %}
