--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <title>MyFlaskApp</title>
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -36,17 +36,23 @@
       </div>
     </header>
     <footer>
-      <div class="container text-center">
+      <div class="container  text-center">
         <p>Copyright &copy; Triviales Dichas 2017</p>
       </div>
     </footer>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!-- CKEDITOR -->
     <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
+    <!-- JQuery -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Theme JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/js/grayscale.min.js"></script>
+    <script src="{{url_for('static',filename='js/grayscale.min.js')}}">
+
+    </script>
+
     <script type="text/javascript">
       CKEDITOR.replace('editor')
     </script>
