--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,31 +1,52 @@
-<!-- <nav class="navbar navbar-inverse navbar-fixed-top"> -->
-<nav class="navbar navbar-custom navbar-fixed-top">
-  <div class="container">
+<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
       Menu <i class="fa fa-bars"></i>
       </button>
       <a class="navbar-brand page-scroll" href="#page-top">
-      <i class="fa fa-glass"></i><span class="light"> Triviales</span> Dichas
+      <i class="fa fa-glass"></i> <span class="light">Triviales</span> Dichas
       </a>
     </div>
-    <div class="collapse navbar-collapse">
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/"><i class="fa fa-home"></i>  Inicio</a></li>
-        <li><a href="/about"><i class="fa fa-info"></i>  Acerca de</a></li>
-        <li><a href="/articles"><i class="fa fa-paint-brush"></i>  Publicaciones</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
+        <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+        <li class="hidden">
+          <a href="#page-top"></a>
+        </li>
         {% if session.logged_in %}
-        <li><a href="#">Bienvenido, {{session['username']}}!</a></li>
-        <li><a href="/dashboard"><i class="fa fa-newspaper-o"></i>Dashboard</a></li>
-        <li><a href="/logout"><i class="fa fa-sign-in"></i>Salir</a></li>
+        <li>
+          <a class="page-scroll" href="#">¡Bienvenido, {{session['username']}}!</a>
+        </li>
+        {% endif%}
+        <li>
+          <a class="page-scroll" href="/"><i class="fa fa-home"></i>Inicio</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="/about"><i class="fa fa-info"></i>Acerca de</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="/articles"><i class="fa fa-paint-brush"></i>Publicaciones</a>
+        </li>
+        {% if session.logged_in %}
+        <li>
+          <a class="page-scroll" href="/dashboard"><i class="fa fa-newspaper-o"></i>Dashboard</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="/logout"><i class="fa fa-sign-in"></i>Salir</a>
+        </li>
         {% else %}
-        <li><a href="/register"><i class="fa fa-user"></i>  Registrarse</a></li>
-        <li><a href="/login"><i class="fa fa-sign-in"></i>  Iniciar Sesión</a></li>
+        <li>
+          <a class="page-scroll" href="/register"><i class="fa fa-user"></i>Registrarse</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="/login"><i class="fa fa-sign-in"></i>Iniciar Sesión</a>
+        </li>
         {% endif %}
       </ul>
     </div>
-    <!--/.nav-collapse -->
+    <!-- /.navbar-collapse -->
   </div>
+  <!-- /.container -->
 </nav>
