--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,25 +14,32 @@
     <title>MyFlaskApp</title>
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.css">
     <!-- Theme CSS -->
     <link href="{{ url_for('static', filename='css/grayscale.css') }}" rel="stylesheet">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     {% include 'includes/_navbar.html' %}
     <header class="intro">
       <div class="intro-body">
-          <div class="container col-md-8 col-md-offset-2">
-            {% include 'includes/_messages.html' %}
+        <div class="container col-md-8 col-md-offset-2">
+          {% include 'includes/_messages.html' %}
           <br><br>
           {% block body %}
           {% endblock %}
+          <!-- <a href="#about" class="btn btn-circle page-scroll">
+          <i class="fa fa-angle-double-down animated"></i>
+          </a> -->
         </div>
-      </div>
       </div>
     </header>
     <footer>
@@ -40,21 +47,24 @@
         <p>Copyright &copy; Triviales Dichas 2017</p>
       </div>
     </footer>
+    <script type="text/javascript" src="{{ url_for('static',filename='vendor/jquery/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap-confirmation.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/grayscale.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/js/grayscale.min.js" charset="utf-8"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
     <!-- CKEDITOR -->
     <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
-    <!-- JQuery -->
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Theme JavaScript -->
-    <script src="{{url_for('static',filename='js/grayscale.min.js')}}">
-
-    </script>
-
     <script type="text/javascript">
       CKEDITOR.replace('editor')
+      $('[data-toggle=confirmation]').confirmation({
+  rootSelector: '[data-toggle=confirmation]',
+  // other options
+});
     </script>
+
   </body>
 </html>
