button js confirmation

--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -11,7 +11,7 @@
     <div class="form-group">
       {{render_field(form.body, class_="form-control", id="editor")}}
     </div>
-    <p><input class="btn btn-default" type="submit" value="Submit">
+    <p><input class="btn btn-default" type="submit" data-toggle="confirmation" target="_blank" value="Enviar">
   </form>
 </div>
 {% endblock %}
