--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,7 @@
 <table class="table table-condensed active">
   <thead>
     <tr>
-      <th>ID</th>
+      <th class="hidden">ID</th>
       <th>Title</th>
       <th>Author</th>
       <th>Date</th>
@@ -19,9 +19,9 @@
   </thead>
   {% for article in articles %}
   <tr>
-    <td align="left">{{article.id}}</td>
+    <td align="left" class="hidden">{{article.id}}</td>
     <td align="left">
-      <a  href="article/{{article.id}}" class="link">
+      <a  href="article/{{article.id}}" class="btn btn-default">
       {{article.title}}
       </a>
     </td>
