--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <style type="text/css" media="screen">
       footer {
@@ -48,23 +48,27 @@
       </div>
     </footer>
     <script type="text/javascript" src="{{ url_for('static',filename='vendor/jquery/jquery.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap-confirmation.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.js') }}"></script>
     <script src="{{ url_for('static',filename='js/grayscale.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/js/grayscale.min.js" charset="utf-8"></script>
+    <script src="http://bootstrap-confirmation.js.org/dist/bootstrap-confirmation2/bootstrap-confirmation.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
     <!-- CKEDITOR -->
     <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
     <!-- Theme JavaScript -->
-    <script type="text/javascript">
-      CKEDITOR.replace('editor')
-      $('[data-toggle=confirmation]').confirmation({
-  rootSelector: '[data-toggle=confirmation]',
-  // other options
-});
-    </script>
+    <style>
+  .popover {
+    max-width: inherit;
+    color: black;
 
+  }
+</style>
+    <script type="text/javascript">
+      $('[data-toggle=confirmation]').confirmation();
+      $('[data-toggle=confirmation-singleton]').confirmation({ popout: true});
+      CKEDITOR.replace('editor')
+    </script>
   </body>
 </html>
