dashboard query modified; order by date DESC;

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div  align="left">
   <h1>Dashboard</h1>
-  <a href="/add_article" class="btn btn-default">Add article</a>
+  <a href="/add_article" class="btn btn-default">Añadir entrada</a>
 </div>
 {% if articles %}
 <br>
