--- a/templates/register.html
+++ b/templates/register.html
@@ -22,6 +22,6 @@
   <div class="form-group">
     {{render_field(form.accept_tos)}}
   </div>
-  <p><input type="submit" class="btn btn-default" value="Submit"></p>
+  <p><input class="btn btn-default" type="submit" data-toggle="confirmation" target="_blank" value="Enviar"></p>
 </form>
 {% endblock %}
