--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -1,8 +1,7 @@
 {% extends 'layout.html' %}
 {% block body %}
-<br><br><br>
 <div align="left">
-  <h1>Add Article</h1>
+  <h1>Añadir entrada</h1>
   {% from "includes/_formhelpers.html" import render_field %}
   <form action="" method="POST">
     <div class="form-group">
@@ -11,7 +10,19 @@
     <div class="form-group">
       {{render_field(form.body, class_="form-control", id="editor")}}
     </div>
-    <p><input class="btn btn-default" type="submit" data-toggle="confirmation" target="_blank" value="Enviar">
+    <p>
+      <button class="btn btn-default" data-toggle="confirmation"
+        data-btn-ok-label="Sí"
+        data-btn-ok-icon="glyphicon glyphicon-ok"
+        data-btn-ok-class="btn-success btn-xs"
+        data-btn-cancel-label="No" data-btn-cancel-icon="glyphicon glyphicon-remove"
+        data-btn-cancel-class="btn-danger btn-xs"
+        data-title="Confirmar envío"
+        >
+        <!-- data-title="Confirmar envío" data-content="This might be dangerous" -->
+        Enviar
+      </button>
+    </p>
   </form>
 </div>
 {% endblock %}
