--- a/templates/article.html
+++ b/templates/article.html
@@ -5,7 +5,7 @@
   <div>
     <div>
       <div >
-        <h1>{{article.title}}</h1>
+        <h1 class="text-right">{{article.title}}</h1>
         <hr>
         {{article.body | safe}}
         <br><br>
