--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,9 +10,10 @@
   <thead>
     <tr>
       <th class="hidden">ID</th>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Date</th>
+      <th></th>
+      <th>Título</th>
+      <th>Autor</th>
+      <th>Escrito el</th>
       <th></th>
       <th></th>
     </tr>
@@ -20,12 +21,15 @@
   {% for article in articles %}
   <tr>
     <td align="left" class="hidden">{{article.id}}</td>
-    <td align="left">
-      <a  href="article/{{article.id}}" class="btn btn-default">
-      {{article.title}}
-      </a>
+    <td>
+        <a  href="article/{{article.id}}" class="btn btn-default btn-xs">
+          VER
+        </a>
     </td>
-    <td align="left">{{article.author}}</td>
+    <td align="left">
+      {{article.title}}
+    </td>
+    <td align="left">{{article.name}}</td>
     <td align="left">{{article.create_date.strftime("%c")}}</td>
     <td align="left"><a href="edit_article/{{article.id}}" class="btn btn-success pull-right">Edit</a></td>
     <td align="left"><a href="#" class="btn btn-danger pull-right">Delete</a></td>
