--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,9 @@
   <div class="btn-group">
     <a href="/register" class="btn btn-default">Register</a>
     <a href="/login" class="btn btn-default">Login</a>
-    <a class="btn btn-large btn-default" data-toggle="confirmation"
-   href="#" target="_blank">Confirmation</a>
-   <a class="btn btn-default">&times;</a>
+    <a class="btn btn-large btn-default hidden" data-toggle="confirmation"
+   href="#" target="_blank" data-title="Confirmar envío">Confirmation</a>
+   <a class="btn btn-default hidden">&times;</a>
   </div>
   {% endif %}
 </div>
