Modfs: btn style, dashboard query, foo test returns json object

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <a href="/register" class="btn btn-default">Register</a>
     <a href="/login" class="btn btn-default">Login</a>
     <a class="btn btn-large btn-default hidden" data-toggle="confirmation"
-   href="#" target="_blank" data-title="Confirmar envío">Confirmation</a>
+   href="#" target="_blank" data-title="Confirmar envío">TEST</a>
    <a class="btn btn-default hidden">&times;</a>
   </div>
   {% endif %}
