--- a/templates/article.html
+++ b/templates/article.html
@@ -14,4 +14,10 @@
     </div>
   </div>
 </section>
+<hr>
+<div >
+  <a href="#page-top" class="btn btn-circle page-scroll">
+  <i class="fa fa-angle-double-up animated"></i>
+  </a>
+</div>
 {% endblock %}
