--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,7 +55,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/js/grayscale.min.js" charset="utf-8"></script>
     <script src="http://bootstrap-confirmation.js.org/dist/bootstrap-confirmation2/bootstrap-confirmation.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- CKEDITOR -->
     <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
     <!-- Theme JavaScript -->
@@ -63,6 +63,9 @@
       .popover {
       max-width: inherit;
       color: black;
+      }
+      .container {
+        overflow-y: auto;
       }
     </style>
     <script type="text/javascript">
