--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,5 +1,5 @@
 <!-- <nav class="navbar navbar-custom navbar-fixed-top" role="navigation"> -->
-<nav class="navbar navbar-custom" role="navigation">
+<nav class="navbar navbar-custom navbar-fixed" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -20,16 +20,18 @@
         <li>
           <a class="page-scroll" href="#">¡Bienvenido, {{session['username']}}!</a>
         </li>
-        {% endif%}
+        {% endif %}
         <li>
           <a class="page-scroll" href="/"><i class="fa fa-home"></i>Inicio</a>
         </li>
         <li>
           <a class="page-scroll" href="/about"><i class="fa fa-info"></i>Acerca de</a>
         </li>
+        {% if not session.logged_in %}
         <li>
           <a class="page-scroll" href="/articles"><i class="fa fa-paint-brush"></i>Publicaciones</a>
         </li>
+        {% endif %}
         {% if session.logged_in %}
         <li>
           <a class="page-scroll" href="/dashboard"><i class="fa fa-newspaper-o"></i>Dashboard</a>
