--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,17 @@
 {% block body %}
 <div >
   <h1>Welcome To Hades</h1>
-  <p class="lead">Flask Tutorial</p>
+  <blockquote class="blockquote">
+    <p class="mb-0 text-justify">
+      <i class="fa fa-quote-left" aria-hidden="true"></i><br>
+      <i>
+
+      Yo soy Ubik. Antes de que el universo existiera, yo existía. Yo hice los soles y los mundos. Yo creé las vidas y los espacios en los que habitan. Yo las cambio de lugar a mi antojo. Van donde yo dispongo y hacen lo que yo les ordeno. Yo soy el verbo, y mi nombre no puede ser pronunciado. Es el nombre que nadie conoce. <br>Me llaman Ubik, pero Ubik no es mi nombre. Soy. Seré siempre.
+    </i>
+      <i class="fa fa-quote-right" aria-hidden="true"></i>
+    </p>
+    <small><em>Ubik</em></small>
+  </blockquote>
   {% if session.logged_in == NULL %}
   <div class="btn-group">
     <a href="/register" class="btn btn-default">Register</a>
