--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>MyFlaskApp</title>
+    <title>Triviales Dichas</title>
+    <link rel="icon"
+      type="image/png"
+      href="http://cryoswinechiller.com/wp-content/uploads/2014/05/tastecamp-favicon1.png">
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -26,6 +29,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     {% include 'includes/_navbar.html' %}
@@ -65,7 +69,7 @@
       color: black;
       }
       .container {
-        overflow-y: auto;
+        overflow: auto;
       }
     </style>
     <script type="text/javascript">
@@ -85,7 +89,6 @@
       //   }
       //   ]
       // });
-
       CKEDITOR.replace('editor');
     </script>
   </body>
