--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -25,7 +25,10 @@
           <a class="page-scroll" href="/"><i class="fa fa-home"></i>Inicio</a>
         </li>
         <li>
-          <a class="page-scroll" href="/about"><i class="fa fa-info"></i>Acerca de</a>
+          <a class="page-scroll" href="#about"><i class="fa fa-info"></i>Acerca de</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#contact"><i class="fa fa-phone"></i>Contacto</a>
         </li>
         {% if not session.logged_in %}
         <li>
