--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,6 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     {% include 'includes/_navbar.html' %}
@@ -40,12 +39,13 @@
           <br><br>
           {% block body %}
           {% endblock %}
-          <!-- <a href="#about" class="btn btn-circle page-scroll">
-            <i class="fa fa-angle-double-down animated"></i>
-            </a> -->
+          <br>
         </div>
       </div>
     </header>
+    {% if flag %}
+    {% include 'includes/_sections.html' %}
+    {% endif %}
     <footer>
       <div class="container  text-center">
         <p>Copyright &copy; Triviales Dichas 2017</p>
@@ -69,7 +69,7 @@
       color: black;
       }
       .container {
-        overflow: auto;
+      overflow: auto;
       }
     </style>
     <script type="text/javascript">
