--- a/templates/includes/_sections.html
+++ b/templates/includes/_sections.html
@@ -1,15 +1,15 @@
 <!-- About Section -->
 <section id="about" class="container content-section text-center">
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-            <h2>Acerca de nosotros</h2>
-            <p class="text-justify">Con un exceso de curiosidad y un poco de ocio divagamos entre los más triviales temas.
-Cine, literatura, todo y nada, la vida. :v</p>
-<p>¡Acompáñanos en esta aventura llamada vida!</p>
-        </div>
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h2>Acerca de nosotros</h2>
+      <p class="text-justify">Con un exceso de curiosidad y un poco de ocio divagamos entre los más triviales temas.
+        Cine, literatura, todo y nada, la vida. :v
+      </p>
+      <p>¡Acompáñanos en esta aventura llamada vida!</p>
     </div>
+  </div>
 </section>
-
 <!-- contact Section -->
 <section id="contact" class="content-section text-center">
   <div class="download-section">
