filter titles js (articles)

--- a/templates/articles.html
+++ b/templates/articles.html
@@ -4,8 +4,7 @@
 <h1 class="text-left">Publicaciones</h1>
 <div class="inner-addon left-addon">
     <i class="fa fa-search"></i>
-
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Buscar título..."/>
+    <input type="text" id="myInput" onkeyup="filterTitles()" placeholder="Buscar título..."/>
 </div>
 
   <table id="table_articles" class="table table-custom">
