--- a/templates/login.html
+++ b/templates/login.html
@@ -2,13 +2,14 @@
 {% block body %}
 <h1>Login</h1>
 <form action="" method="POST" class="text-left">
-  <div class="form-group">
-    <label>Username</label>
-    <input type="text" name="username" class="form-control" value={{request.form.username}}>
+  <div class="inner-addon left-addon form-group">
+      <i class="fa fa-user"></i>
+      <input type="text" id="myInput" name="username" placeholder="Usuario" value={{request.form.username}}>
   </div>
-  <div class="form-group">
-    <label>Password</label>
-    <input type="password" name="password" class="form-control" value={{request.form.password}}>
+
+  <div class="inner-addon left-addon form-group">
+      <i class="fa fa-key"></i>
+      <input type="password" id="myInput" name="password" placeholder="Usuario" value={{request.form.password}}>
   </div>
   <br>
   <button type="submit" class="btn btn-default">Submit</button>
