--- a/static/css/grayscale.css
+++ b/static/css/grayscale.css
@@ -313,14 +313,28 @@ body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
 
-
 .popover {
 max-width: inherit;
 color: black;
 }
-::-webkit-input-placeholder { /* WebKit browsers */
-color:    white;
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    white;
 }
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #909;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #909;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #909;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   color:    #909;
+}
+
 #myInput {
 background-image: url('/css/searchicon.png'); /* Add a search icon to input */
 background-position: 10px 12px; /* Position the search icon */
@@ -362,7 +376,7 @@ position: relative;
 /* style icon */
 .inner-addon .fa {
 position: absolute;
-padding: 17px;
+padding: 15px;
 pointer-events: none;
 }
 
