--- a/templates/register.html
+++ b/templates/register.html
@@ -25,13 +25,13 @@
     {{render_field(form.accept_tos)}}
   </div>
   <p>
-    <button class="btn btn-default" data-toggle="confirmation"
+    <button class="btn btn-default " data-toggle="confirmation"
       data-btn-ok-label="Sí"
       data-btn-ok-icon="glyphicon glyphicon-ok"
       data-btn-ok-class="btn-success btn-xs"
       data-btn-cancel-label="No" data-btn-cancel-icon="glyphicon glyphicon-remove"
       data-btn-cancel-class="btn-danger btn-xs"
-      data-title="Confirmar registro"
+      data-title="Confirmar envío"
       >
       <!-- data-title="Confirmar envío" data-content="This might be dangerous" -->
       Enviar
