--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -1,11 +1,16 @@
 {% extends 'layout.html' %}
 {% block body %}
+<br><br>
 <h1 class="text-left">Añadir entrada</h1>
 {% from "includes/_formhelpers.html" import render_field %}
 <form action="" method="POST">
-  <div class="form-group text-left">
-    {{render_field(form.title, class_="form-control")}}
+  <div class="inner-addon left-addon form-group">
+      <i class="fa fa-user"></i>
+      <input type="text" id="myInput" name="title" placeholder="Título" value={{request.form.username}}>
   </div>
+  <!-- <div class="form-group text-left">
+    {{render_field(form.title, class_="form-control")}}
+  </div> -->
   <div class="form-group text-left">
     {{render_field(form.body, class_="form-control", id="editor")}}
   </div>
