--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,6 @@
       <input type="password" id="myInput" name="password" placeholder="Usuario" value={{request.form.password}}>
   </div>
   <br>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-default">Enviar</button>
 </form>
 {% endblock %}
