add tables sorting

--- a/templates/articles.html
+++ b/templates/articles.html
@@ -10,11 +10,11 @@
     <thead class="thead-default">
       <tr>
         <th></th>
-        <th onclick="sortTable(0)" class="text-left" >
-          Título
+        <th onclick="sortTable(1)" class="text-left" >
+          Título<i class="fa fa-sort" aria-hidden="true"></i>
         </th>
-        <th onclick="sortTable(0)" class="text-left">
-          Autor
+        <th onclick="sortTable(2)" class="text-left">
+          Autor<i class="fa fa-sort" aria-hidden="true"></i>
         </th>
         <th class="text-right">
           Fecha
