--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,10 +16,10 @@
     <table id="table_articles" class="table table-condensed active display">
       <thead class="thead-custom">
         <tr>
-          <th class="hidden">ID</th>
+
           <th></th>
-          <th onclick="sortTable(0)">Título</th>
-          <th onclick="sortTable(1)">Autor</th>
+          <th onclick="sortTable(1)">Título<i class="fa fa-sort" aria-hidden="true"></i></th>
+          <th onclick="sortTable(2)">Autor<i class="fa fa-sort" aria-hidden="true"></i></th>
           <th>Subido el</th>
           <th></th>
           <th></th>
